# self-agent-id

./: .gitignore  README.md  ROUTE_POLICY_HARDENING_PLAN.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW_PROMPT.md  openapi.yaml  package-lock.json
app/: .env  .env.example  README.md  middleware.ts  package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/components/: CardMatrixReveal.tsx  ClientProviders.tsx  CodeBlock.tsx  Footer.tsx  Navbar.tsx  NetworkBanner.tsx  PrivyIcon.tsx  TestCard.tsx
app/lib/: NetworkContext.tsx  aa.ts  agent-discovery.ts  agentKeyVault.ts  ed25519.ts  (+10 more)
contracts/: .env.example  .gitignore  README.md  foundry.toml  remappings.txt
docs/: CLI_REGISTRATION.md  CLI_REGISTRATION_GUIDE.md  CLI_REGISTRATION_SPEC.md  SELF_PROTOCOL_INTEGRATION.md  comparison-agent-identity-tools.md
examples/: README.md
functions/: package.json
python-sdk/: README.md  pyproject.toml
python-sdk/scripts/: generate_test_vectors.ts  test.sh
python-sdk/src/self_agent_sdk/: __init__.py  _signing.py  agent.py  cli.py  constants.py  registration.py  types.py  verifier.py
python-sdk/src/self_agent_sdk/middleware/: fastapi.py  flask.py
python-sdk/tests/: conftest.py  test_agent.py  test_cli.py  test_cross_language.py  test_ed25519_agent.py  test_live.py  test_middleware_fastapi.py  test_middleware_flask.py  test_signing.py  test_verifier.py
python-sdk/tests/fixtures/: test_vectors.json
rust-sdk/: Cargo.toml  README.md
scripts/: local-registry-harness.sh
sdk/: README.md  package.json
typescript-sdk/: README.md  package-lock.json  package.json
(+131 files in other folders)
