[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfxyz-agent-sdk"
version = "0.1.0"
description = "Python SDK for Self Agent ID — proof-of-human verification for AI agents"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "web3>=6.0,<8",
    "eth-account>=0.11",
    "httpx>=0.25",
]

[project.scripts]
self-agent = "self_agent_sdk.cli:main"
self-agent-python = "self_agent_sdk.cli:main"

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100"]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "flask>=2.0",
    "fastapi>=0.100",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/self_agent_sdk"]
